--- a/game/franks/item6-shot/index.html
+++ b/game/franks/item6-shot/index.html
@@ -8,17 +8,36 @@
   <title>Document</title>
 
   <style>
+    body {
+      width: 100vw;
+      height: 100vh;
+      background-image:
+        linear-gradient(to bottom, cyan, transparent),
+        linear-gradient(225deg, magenta, transparent),
+        linear-gradient(45deg, yellow, transparent);
+    }
+
     #canvas1 {
-      position: relative;
-      width: 500px;
-      height: 500px;
-      border: 1px solid black;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+
+    #collisionCanvas {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
     }
   </style>
 </head>
 
 <body>
   <canvas id="canvas1"></canvas>
+  <canvas id="collisionCanvas"></canvas>
 
 
   <script src="./script.js">
