--- a/game/franks/item6-shot/index.html
+++ b/game/franks/item6-shot/index.html
@@ -9,8 +9,11 @@
 
   <style>
     body {
+      margin: 0;
+      padding: 0;
       width: 100vw;
       height: 100vh;
+      overflow: hidden;
       background-image:
         linear-gradient(to bottom, cyan, transparent),
         linear-gradient(225deg, magenta, transparent),
@@ -26,18 +29,16 @@
     }
 
     #collisionCanvas {
-      position: absolute;
       width: 100%;
       height: 100%;
-      top: 0;
-      left: 0;
     }
   </style>
 </head>
 
 <body>
-  <canvas id="canvas1"></canvas>
   <canvas id="collisionCanvas"></canvas>
+
+  <canvas id="canvas1"></canvas>
 
 
   <script src="./script.js">
