--- a/game/franks/item6-shot/index.html
+++ b/game/franks/item6-shot/index.html
@@ -6,41 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./style.css">
 
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-      background-image:
-        linear-gradient(to bottom, cyan, transparent),
-        linear-gradient(225deg, magenta, transparent),
-        linear-gradient(45deg, yellow, transparent);
-    }
-
-    #canvas1 {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-    }
-
-    #collisionCanvas {
-      width: 100%;
-      height: 100%;
-    }
-  </style>
 </head>
 
 <body>
   <canvas id="collisionCanvas"></canvas>
-
   <canvas id="canvas1"></canvas>
-
-
   <script src="./script.js">
   </script>
 </body>
